# Rust_Oracles_Demo

./: .env  Cargo.toml  btcusd_average.txt  config.toml  readme.md
benches/: bench_test.rs
result_data/: Binance_result_and_data_points.txt  Bitfinex_result_and_data_points.txt  Bybit_result_and_data_points.txt  Gemini_result_and_data_points.txt  Kraken_result_and_data_points.txt  binance_result_and_data_points.txt  bitfinex_result_and_data_points.txt  gemini_result_and_data_points.txt  kraken_result_and_data_points.txt
src/: average_btcusd.rs  counter.rs  db_operations.rs  file_operation.rs  key_counter.rs  lib.rs  main.rs  ws_process.rs
