[package]
name = "demo_oracles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
dotenv = "0.15.0"
structopt = "0.3.23"
k256 = "0.13.2"
rand = "0.8.5"
toml = "0.8.6"

[dev-dependencies]
criterion = "0.5.0"


[[bench]]
name = "bench_test"
harness = false
